--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@editorjs/code": "^2.9.3",
     "@editorjs/editorjs": "^2.28.2",
     "@editorjs/embed": "^2.5.3",
     "@editorjs/header": "^2.7.0",
